# Aquinas

./: README.md  Random_2x2_interferometer.nb  Random_3x3_interferometer.nb  boson_sampling_probabilities.py  direct_decomposition.py  fringe_test.py  new_numeric_unitaries.py  numeric_truncated_unitaries.py  pyproject.toml  setup.py  simulation.py  symbolic_truncated_unitaries.py  trotter_decomposition.py
demos/: CNOT.ipynb  HOM.ipynb  MachZender.ipynb  random2by2.ipynb  random3by3.ipynb  random3by3_new.ipynb  random3by3_new_new.ipynb  random3by3_old.ipynb
notebooks_for_debugging/: knit_test.ipynb  multi_photon_3mode.ipynb
notebooks_for_debugging/mathematica_notebooks/: Fixed_2x2_interferometer.nb  Fixed_two_2x2_interferometer.nb  Random_2x2_interferometer.nb  sophisticatedtest.nb  subspace_test.nb  testifworking.nb
paper/: 3x3unitary.npy  5x5unitary.npy  compilation_times.ipynb  results_and_plots.ipynb  scaling_sizes.ipynb  simulation_precision.ipynb
sandbox/: compilation_vs_runtime.ipynb
src/Aquinas/: __init__.py  direct_decomposition.py  simulation.py
src/interferometer_circuits.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
symbolic_truncated_unitaries/: 1.pkl  2.pkl  3.pkl  4.pkl  5.pkl
tests/: Alan's code.ipynb  consecutive_bs_test.ipynb  even_beamsplitter.ipynb  global_phase_test.ipynb  knit_test.ipynb  knit_test2.ipynb  multi_photon_3mode.ipynb  stage1.ipynb  stage2.ipynb  stage3.ipynb  subspace_test.ipynb  test_direct_decomposition.py  test_numeric_truncated_unitaries.py  test_simulation.py  three_knit_test.ipynb  two_knit_test.ipynb  waveplate.ipynb
(+6 files in other folders)
